arrumando bugs de visibilidade

--- a/css/style.css
+++ b/css/style.css
@@ -189,3 +189,8 @@ a:hover {
 #under-construction p {
     font-style: italic;
 }
+@media screen and (max-width: 600px) {
+    .sidebar {
+        display: none;
+    }
+}
